crates/voom-cli/tests/snapshots/inspection_envelope__inspection_envelope__job_list_newest_first.snap
---
source: crates/voom-cli/tests/inspection_envelope.rs
expression: json
---
{
  "schema_version": "0",
  "command": "job",
  "status": "ok",
  "data": {
    "jobs": [
      {
        "id": 3,
        "kind": "probe_file",
        "state": "open",
        "priority": 2,
        "created_at": "1970-01-01 0:00:02.0 +00:00:00",
        "updated_at": "1970-01-01 0:00:02.0 +00:00:00",
        "epoch": 0
      },
      {
        "id": 2,
        "kind": "probe_file",
        "state": "open",
        "priority": 1,
        "created_at": "1970-01-01 0:00:01.0 +00:00:00",
        "updated_at": "1970-01-01 0:00:01.0 +00:00:00",
        "epoch": 0
      },
      {
        "id": 1,
        "kind": "probe_file",
        "state": "open",
        "priority": 0,
        "created_at": "1970-01-01 0:00:00.0 +00:00:00",
        "updated_at": "1970-01-01 0:00:00.0 +00:00:00",
        "epoch": 0
      }
    ]
  },
  "local": {
    "db_url": "[db-url]",
    "config_path": "[config-path]"
  },
  "warnings": [],
  "error": null
}
