crates/voom-cli/tests/snapshots/inspection_envelope__inspection_envelope__ticket_list_newest_first.snap
---
source: crates/voom-cli/tests/inspection_envelope.rs
expression: json
---
{
  "schema_version": "0",
  "command": "ticket",
  "status": "ok",
  "data": {
    "tickets": [
      {
        "id": 3,
        "job_id": null,
        "kind": "probe_file",
        "state": "ready",
        "priority": 0,
        "attempt": 0,
        "max_attempts": 3,
        "next_eligible_at": "1970-01-01 0:00:00.0 +00:00:00",
        "created_at": "1970-01-01 0:00:00.0 +00:00:00",
        "state_changed_at": "1970-01-01 0:00:00.0 +00:00:00",
        "epoch": 0
      },
      {
        "id": 2,
        "job_id": null,
        "kind": "probe_file",
        "state": "leased",
        "priority": 0,
        "attempt": 0,
        "max_attempts": 3,
        "next_eligible_at": "1970-01-01 0:00:00.0 +00:00:00",
        "created_at": "1970-01-01 0:00:00.0 +00:00:00",
        "state_changed_at": "1970-01-01 0:00:00.0 +00:00:00",
        "epoch": 0
      },
      {
        "id": 1,
        "job_id": null,
        "kind": "probe_file",
        "state": "ready",
        "priority": 0,
        "attempt": 0,
        "max_attempts": 3,
        "next_eligible_at": "1970-01-01 0:00:00.0 +00:00:00",
        "created_at": "1970-01-01 0:00:00.0 +00:00:00",
        "state_changed_at": "1970-01-01 0:00:00.0 +00:00:00",
        "epoch": 0
      }
    ]
  },
  "local": {
    "db_url": "[db-url]",
    "config_path": "[config-path]"
  },
  "warnings": [],
  "error": null
}
